--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         },
         {
           title: "2. Website Kartu Informasi",
-          img: "https://via.placeholder.com/800x300?text=Kartu+Informasi",
+          img: "Kartuinfo.png",
           desc: "Desain kartu nama atau kartu identitas menggunakan HTML dan CSS dengan layout menarik.",
           link: "kartu_info.html"
         },
@@ -192,4 +192,5 @@
   </body>
 
   </html>
+
 
