--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
           link: "kartu_info.html"
         },
         {
-          title: "3. Website Resep Makanan",
+          title: "3. Website Jadwal Pelajaran",
           img: "https://via.placeholder.com/800x300?text=Resep+Makanan",
-          desc: "Berisi resep masakan favorit dengan daftar bahan, langkah-langkah, dan gambar hidangan.",
-          link: "menu.html"
+          desc: "Berisi jadwal pelajaran sekolah kelas 11.",
+          link: "Jadwal.html"
         },
         {
           title: "4. Website Kartu Undangan",
@@ -192,5 +192,6 @@
   </body>
 
   </html>
+
 
 
