--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         },
         {
           title: "3. Website Jadwal Pelajaran",
-          img: "https://via.placeholder.com/800x300?text=Resep+Makanan",
+          img: "jadwalpelajaran.png",
           desc: "Berisi jadwal pelajaran sekolah kelas 11.",
           link: "Jadwal.html"
         },
@@ -192,6 +192,7 @@
   </body>
 
   </html>
+
 
 
 
