--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         {
           title: "3. Website Jadwal Pelajaran",
           img: "jadwalpelajaran.png",
-          desc: "Berisi jadwal pelajaran sekolah kelas 11.",
+          desc: "Tabel interaktif berisi jadwal pelajaran mingguan dengan tampilan rapi dan warna-warna menarik.",
           link: "Jadwal.html"
         },
         {
@@ -121,12 +121,13 @@
           desc: "Formulir pendaftaran online dengan elemen input, radio, checkbox, dan tombol kirim.",
           link: "#"
         },
-        {
-          title: "6. Website Jadwal Pelajaran",
-          img: "https://via.placeholder.com/800x300?text=Jadwal+Pelajaran",
-          desc: "Tabel interaktif berisi jadwal pelajaran mingguan dengan tampilan rapi dan warna-warna menarik.",
-          link: "#"
+       {
+          title: "6. Website Resep Makanan",
+          img: "https://via.placeholder.com/800x300?text=Resep+Makanan",
+          desc: "Berisi resep masakan favorit dengan daftar bahan, langkah-langkah, dan gambar hidangan.",
+          link: "menu.html"
         },
+
         {
           title: "7. Website Project Akhir",
           img: "https://via.placeholder.com/800x300?text=Project+Akhir",
@@ -192,6 +193,7 @@
   </body>
 
   </html>
+
 
 
 
